--- a/index.html
+++ b/index.html
@@ -4,6 +4,5 @@ search_exclude: true
 image: images/covid-growth.png
 ---
 
-# DataCol 
-
-[^1]: The update schedule is specified [here](https://github.com/github/covid19-dashboard/blob/master/.github/workflows/update-models.yaml#L4).  The data presented in this project carry inherent uncertainties. Use of these data for public health or policy making should only be done after an exploration of the methods and assumptions presented.
+### 
+![datacol](backup/style_guide/logo/1054952-512.png)
