--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@ layout: home
 search_exclude: true
 image: images/covid-growth.png
 ---
-
-### 
-![datacol](backup/style_guide/logo/1054952-512.png)
+ 
+ **data**col.com.mx ![datacol](_backup/style_guide/logo/1054952-16.png)
