--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ search_exclude: true
 image: images/covid-growth.png
 ---
  
- **data**col.com.mx ![datacol](/_backup/style_guide/logo/1054952-32.png)
+ **data**col.com.mx 
+ ![datacol](/_backup/style_guide/logo/1054952-32.png)
